--- a/templates/default/nat_monitor.sh.erb
+++ b/templates/default/nat_monitor.sh.erb
@@ -1,9 +1,10 @@
-#!/bin/sh
+#!/bin/bash
 # This script will monitor another NAT instance and take over its routes
 # if communication with the other instance fails
 
-# Original, unmodified script downloaded from:
+# Based on script downloaded from:
 # http://media.amazonwebservices.com/articles/nat_monitor_files/nat_monitor.sh
+# Modified to work without fixed paths
 
 # NAT instance variables
 # Other instance's IP to ping and route to grab if other node goes down
@@ -25,7 +26,9 @@ Wait_for_Instance_Start=300
 
 # Run aws-apitools-common.sh to set up default environment variables and to
 # leverage AWS security credentials provided by EC2 roles
-. /etc/profile.d/aws-apitools-common.sh
+if [ -f /etc/profile.d/aws-apitools-common.sh ]; then
+ . /etc/profile.d/aws-apitools-common.sh
+fi
 
 # Determine the NAT instance private IP so we can ping the other NAT instance, take over
 # its route, and reboot it.  Requires EC2 DescribeInstances, ReplaceRoute, and Start/RebootInstances
@@ -49,14 +52,14 @@ Wait_for_Instance_Start=300
 # Get this instance's ID
 Instance_ID=`/usr/bin/curl --silent http://169.254.169.254/latest/meta-data/instance-id`
 # Get the other NAT instance's IP
-NAT_IP=`/opt/aws/bin/ec2-describe-instances $NAT_ID -U $EC2_URL | grep PRIVATEIPADDRESS -m 1 | awk '{print $2;}'`
+NAT_IP=`ec2-describe-instances $NAT_ID -U $EC2_URL | grep PRIVATEIPADDRESS -m 1 | awk '{print $2;}'`
 
 echo `date` "-- Starting NAT monitor"
 echo `date` "-- Adding this instance to $My_RT_ID default route on start"
-/opt/aws/bin/ec2-replace-route $My_RT_ID -r 0.0.0.0/0 -i $Instance_ID -U $EC2_URL
+ec2-replace-route $My_RT_ID -r 0.0.0.0/0 -i $Instance_ID -U $EC2_URL
 # If replace-route failed, then the route might not exist and may need to be created instead
 if [ "$?" != "0" ]; then
-   /opt/aws/bin/ec2-create-route $My_RT_ID -r 0.0.0.0/0 -i $Instance_ID -U $EC2_URL
+  ec2-create-route $My_RT_ID -r 0.0.0.0/0 -i $Instance_ID -U $EC2_URL
 fi
 
 while [ . ]; do
@@ -72,23 +75,23 @@ while [ . ]; do
       # NAT instance is unhealthy, loop while we try to fix it
       if [ "$ROUTE_HEALTHY" == "0" ]; then
         echo `date` "-- Other NAT heartbeat failed, taking over $NAT_RT_ID default route"
-        /opt/aws/bin/ec2-replace-route $NAT_RT_ID -r 0.0.0.0/0 -i $Instance_ID -U $EC2_URL
+        ec2-replace-route $NAT_RT_ID -r 0.0.0.0/0 -i $Instance_ID -U $EC2_URL
         ROUTE_HEALTHY=1
       fi
       # Check NAT state to see if we should stop it or start it again
       # This sample script works well with EC2 API tools version 1.6.12.2 2013-10-15.
       # If you are using a different version and your script is stuck at NAT_STATE, please modify
       # the script to "print $5;" instead of "print $4;".
-      NAT_STATE=`/opt/aws/bin/ec2-describe-instances $NAT_ID -U $EC2_URL | grep INSTANCE | awk '{print $6;}'`
+      NAT_STATE=`ec2-describe-instances $NAT_ID -U $EC2_URL | grep INSTANCE | awk '{print $5;}'`
       if [ "$NAT_STATE" == "stopped" ]; then
         echo `date` "-- Other NAT instance stopped, starting it back up"
-        /opt/aws/bin/ec2-start-instances $NAT_ID -U $EC2_URL
+        ec2-start-instances $NAT_ID -U $EC2_URL
         NAT_HEALTHY=1
         sleep $Wait_for_Instance_Start
       else
         if [ "$STOPPING_NAT" == "0" ]; then
           echo `date` "-- Other NAT instance $NAT_STATE, attempting to stop for reboot"
-          /opt/aws/bin/ec2-stop-instances $NAT_ID -U $EC2_URL
+          ec2-stop-instances $NAT_ID -U $EC2_URL
           STOPPING_NAT=1
         fi
         sleep $Wait_for_Instance_Stop
@@ -98,4 +101,3 @@ while [ . ]; do
     sleep $Wait_Between_Pings
   fi
 done
-
