--- a/templates/default/nat_monitor.sh.erb
+++ b/templates/default/nat_monitor.sh.erb
@@ -7,8 +7,7 @@
 # Modified to work without fixed paths
 
 # NAT instance variables
-# Other instance's IP to ping and route to grab if other node goes down
-NAT_ID=<%= @partner_id %>
+# Other instance's route to monitor and grab if other node goes down
 NAT_RT_ID=<%= @partner_route %>
 
 # My route to grab when I come back up
@@ -37,6 +36,7 @@ fi
 #  "Statement": [
 #    {
 #      "Action": [
+#        "ec2:DescribeRouteTables",
 #        "ec2:DescribeInstances",
 #        "ec2:CreateRoute",
 #        "ec2:ReplaceRoute",
@@ -54,8 +54,6 @@ fi
 
 # Get this instance's ID
 Instance_ID=`/usr/bin/curl --silent http://169.254.169.254/latest/meta-data/instance-id`
-# Get the other NAT instance's IP
-NAT_IP=`ec2-describe-instances $NAT_ID -U $EC2_URL | grep PRIVATEIPADDRESS -m 1 | awk '{print $2;}'`
 
 echo `date` "-- Starting NAT monitor"
 echo `date` "-- Adding this instance to $My_RT_ID default route on start"
@@ -63,6 +61,20 @@ ec2-replace-route $My_RT_ID -r 0.0.0.0/0 -i $Instance_ID -U $EC2_URL
 # If replace-route failed, then the route might not exist and may need to be created instead
 if [ "$?" != "0" ]; then
   ec2-create-route $My_RT_ID -r 0.0.0.0/0 -i $Instance_ID -U $EC2_URL
+fi
+
+# Get the instance ID of the currently assigned partner instance
+NAT_ID=`ec2-describe-route-tables -U https://ec2.eu-west-1.amazonaws.com $NAT_RT_ID | grep 0.0.0.0/0 -m 1 | awk '{print $2;}'`
+
+# Get its IP
+NAT_IP=`ec2-describe-instances $NAT_ID -U $EC2_URL | grep PRIVATEIPADDRESS -m 1 | awk '{print $2;}'`
+
+# If the partner route is currently controlled by this very own instance, then there is no point in doing a health check
+if [ "$Instance_ID" == "$NAT_ID" ]; then
+  echo `date` "-- Exiting since route $NAT_RT_ID is already managed by this instance. Will re-check on the next configure lifecycle event."
+  exit 0
+else
+  echo `date` "-- Starting to monitor partner $NAT_ID / $NAT_IP"
 fi
 
 while [ . ]; do
@@ -102,9 +114,8 @@ while [ . ]; do
       fi
       <% else %>
       # Assume instance is restarted elsewhere, e.g. manually or via OpsWorks auto-healing
-      # TODO Automatically find partner via OpsWorks -- its instance ID may change, notably when OpsWorks auto-healing completely scraps the old instance
-      sleep $Wait_for_Instance_Start
-      NAT_HEALTHY=1
+      echo `date` "-- Exiting since $NAT_RT_ID is now managed by this instance. Will re-check on the next configure lifecycle event."
+      exit 0
       <% end %>
     done
   else
